--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.17",
     "bcrypt": "^5.1.1",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "formidable": "^3.5.1",
+    "fs": "0.0.1-security",
     "jotai": "^2.6.0",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
