--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.3.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
