--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@headlessui/react": "^1.7.17",
+    "@tanstack/react-query": "^5.15.0",
+    "@tanstack/react-query-devtools": "^5.15.0",
     "bcrypt": "^5.1.1",
     "ckeditor5-custom-build": "file:ckeditor5",
     "formidable": "^3.5.1",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
+    "@tanstack/eslint-plugin-query": "^5.14.6",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
