--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formidable": "^3.5.1",
     "fs": "0.0.1-security",
     "jotai": "^2.6.0",
+    "moment": "^2.29.4",
     "mongodb": "^6.3.0",
     "next": "14.0.3",
     "react": "^18",
